# Advent-Of-Code-2024

./: 06.py  pyproject.toml
